fix: streamer info is not centered

--- a/css/styles.sass
+++ b/css/styles.sass
@@ -10,3 +10,7 @@ section
 ul
    list-style-type: none
    margin-top: 5%
+   padding-left: 0;
+
+li
+   text-align: center
